name:                bound-gen
version:             0.1.0.0
synopsis:            Unwrap Scope's with globally fresh values
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  exposed-modules:     Bound.Unwrap
  build-depends:       base >=4.0 && < 5
                     , bound
                     , monad-gen >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
